--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,7 +1,9 @@
 $color-white: #ffffff;
 $color-black: #000000;
 
-$color-green: #148914;
+$color-green: #4caf50;
+$color-red: #dc211f;
+$color-peach: #ff9800;
 $color-pink: #efb1b0;
 $color-aquamarine: #00b0f0;
 $color-dark-aquamarine: #0282af;
