--- a/src/pages/InstitutionsPage/InstitutionCard/InstitutionCard.scss
+++ b/src/pages/InstitutionsPage/InstitutionCard/InstitutionCard.scss
@@ -13,6 +13,18 @@
 
   &__content {
     flex-grow: 1;
+
+    &:after {
+      content: '';
+      width: 100%;
+      height: 80px;
+      background: linear-gradient(0deg, $color-white, transparent);
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      pointer-events: none;
+      border-radius: 0 0 6px 6px;
+    }
   }
 
   &__title {
