--- a/src/pages/InstitutionsPage/InstitutionCard/InstitutionDetails/InstitutionDetails.scss
+++ b/src/pages/InstitutionsPage/InstitutionCard/InstitutionDetails/InstitutionDetails.scss
@@ -3,11 +3,11 @@
 
 .InstitutionDetails {
   width: 100%;
-  height: 100%;
-  padding: 40px 40px 40px 10px;
+  height: calc(100vh - 200px);
+  overflow: auto;
+  padding: 80px 64px;
   position: relative;
   box-sizing: border-box;
-  overflow: hidden;
 
   &--empty {
     &:after {
@@ -22,6 +22,30 @@
       font-size: 18px;
       line-height: 1;
       color: $color-text-light;
+    }
+  }
+
+  &__rate-label {
+    position: absolute;
+    top: 24px;
+    left: auto;
+  }
+
+  &__list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-family: $font-sans-serif;
+    font-size: 18px;
+    line-height: 1.3;
+    position: relative;
+  }
+
+  &__list-item {
+    padding: 16px 24px;
+
+    &:nth-of-type(2n + 1) {
+      background: rgba($color-pink, 0.15);
     }
   }
 }
