Update green color

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,7 +1,7 @@
 $color-white: #ffffff;
 $color-black: #000000;
 
-$color-green: #4caf50;
+$color-green: #0b710b;
 $color-red: #dc211f;
 $color-peach: #ff9800;
 $color-pink: #efb1b0;
